--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,6 +161,12 @@
     <string name="require_phone_number_dialog_choose">CHOOSE</string>
     <string name="require_phone_number_dialog_buy">BUY</string>
 
+    <!-- Alert Delete Record Dialog -->
+    <string name="alert_delete_record_dialog_title">Delete</string>
+    <string name="alert_delete_record_dialog_message">Are you sure you want to delete this record?</string>
+    <string name="alert_delete_record_dialog_delete">DELETE</string>
+    <string name="alert_delete_record_dialog_cancel">CANCEL</string>
+
     <string name="title_dialog_rate">Review</string>
     <string name="msg_dialog_rate">RATE NOW</string>
     <string name="title_rate_like">You really seem to like this app, since you have already used it %1$d times! It would be great if you took a moment to rate it in the Play Store. Thank you!.</string>
