--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,15 @@
     <string name="btn_rate_now">RATE NOW</string>
     <string name="btn_not_now">NOT NOW</string>
 
+    <string name="usage_message_total">TOTAL</string>
+    <string name="usage_message_incoming">INCOMING</string>
+    <string name="usage_message_outgoing">OUTGOING</string>
+
+    <string name="usage_voice_total">TOTAL</string>
+    <string name="usage_voice_incoming">INCOMING</string>
+    <string name="usage_voice_outgoing">OUTGOING</string>
+    <string name="usage_voice_missing">MISSING</string>
+
     <!-- In-call menu item labels -->
     <!-- Regular in-call menu items: -->
     <!-- In-call menu: Label for "speakerphone" menu item -->
