--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -226,6 +226,24 @@
     <string name="usage_voice_outgoing">Outgoing</string>
     <string name="usage_voice_missing">Missing</string>
 
+    <!-- Payment Fragment -->
+    <string name="payment_label">Payment</string>
+    <string name="payment_methods">Payment Methods</string>
+
+    <string name="next">NEXT</string>
+    <string name="previous">PREVIOUS</string>
+    <string name="done">DONE</string>
+    <string name="card_holder_name_sample">JOHN MATTHEW</string>
+    <string name="card_holder">CARD HOLDER</string>
+    <string name="expiry">EXPIRY</string>
+    <string name="mm_yy">MM/YY</string>
+    <string name="card_expiry">CARD EXPIRY</string>
+    <string name="card_mm_yy">MM/YY</string>
+    <string name="name_on_card">NAME ON CARD</string>
+    <string name="card_number">CARD NUMBER</string>
+    <string name="error_invalid_month">Invalid month</string>
+    <string name="error_card_expired">Card expired</string>
+
 
     <!-- Toolbar text home-->
     <string name="all_toolbar_home">&lt;\u0020 Home</string>
