--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -228,7 +228,7 @@
 
     <!-- RequirePhoneNumberDialog -->
     <string name="require_phone_number_dialog_title">Require phone number</string>
-    <string name="require_phone_number_dialog_message">Please choose phone number or buy a phone</string>
+    <string name="require_phone_number_dialog_message">Please buy a phone</string>
     <string name="require_phone_number_dialog_choose">CHOOSE</string>
     <string name="require_phone_number_dialog_buy">BUY</string>
 
