--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -228,6 +228,7 @@
     <string name="purchase_mms">MMS</string>
     <string name="purchase_mms_summary">This number can send and receive multi media messages to and from mobile number</string>
     <string name="purchase_fail">Purchase fail</string>
+    <string name="purchase_success">Purchase a phone number success</string>
 
     <!-- Fragment Add Fund -->
     <string name="add_fund_label">Add Fund</string>
@@ -251,13 +252,16 @@
     <string name="in_call_keypad">Keypad</string>
     <string name="in_call_transfer">Transfer</string>
 
-    <string name="all_call_disconnected">Disconnected</string>
+    <string name="all_call_disconnected">Connection disconnected</string>
+    <string name="all_call_decline">Phone decline</string>
 
     <!-- Delete Fragment Dialog -->
     <string name="delete_phone_number_dialog_title">Delete</string>
     <string name="delete_phone_number_dialog_message">Are you sure?</string>
     <string name="delete_phone_number_dialog_ok">OK</string>
     <string name="delete_phone_number_dialog_cancel">CANCEL</string>
+
+    <string name="delete_phone_number_success">Delete phone number success</string>
 
     <!-- RequirePhoneNumberDialog -->
     <string name="require_phone_number_dialog_title">Require phone number</string>
