--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -269,6 +269,11 @@
     <string name="require_phone_number_dialog_choose">CHOOSE</string>
     <string name="require_phone_number_dialog_buy">BUY</string>
 
+    <!-- Get Country Dialog -->
+    <string name="get_country_dialog_title">Get countries</string>
+    <string name="get_country_dialog_message">You must to get countries we support</string>
+    <string name="get_country_dialog_load">LOAD AGAIN</string>
+
     <!-- Alert Delete Record Dialog -->
     <string name="alert_delete_record_dialog_title">Delete</string>
     <string name="alert_delete_record_dialog_message">Are you sure you want to delete this record?</string>
