--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,12 @@
 
     <!--<string name="auth0_client_id">JYPws2eLK9Re7Ff5iZlN9T7tQ2sRcN40</string>-->
     <!--<string name="auth0_domain">coderdaudat.auth0.com</string>-->
-    
+
+    <!-- NOTIFICATION -->
+    <string name="notification_money_title">More Phone</string>
+    <string name="notification_money_description">Your more phone is out of money. Please add money to your account.</string>
+    <string name="notification_missing_call">You missing call from </string>
+
     <!--       Menu         -->
     <string name="menu_buy_a_phone">Buy a phone</string>
     <string name="menu_add_fund">Add fund</string>
