--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
 
     <!--       Menu         -->
     <string name="menu_buy_a_phone">Buy a phone</string>
-    <string name="menu_add_fund">Add fund</string>
+    <string name="menu_credit">Credit</string>
     <string name="menu_setting">Setting</string>
     <string name="menu_usage">Usage</string>
     <string name="menu_group_settings">Settings</string>
@@ -234,6 +234,10 @@
     <string name="purchase_mms_summary">This number can send and receive multi media messages to and from mobile number</string>
     <string name="purchase_fail">Purchase fail</string>
     <string name="purchase_success">Purchase a phone number success</string>
+
+    <!-- Fragment Credit -->
+    <string name="credit_label">Credit</string>
+    <string name="credit_title">Your balance:</string>
 
     <!-- Fragment Add Fund -->
     <string name="add_fund_label">Add Fund</string>
