--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="message_progress_dialog">Please wait…</string>
     <string name="message_error_lost_internet">Please check internet!</string>
 
+    <string name="message_error_send">Send message error</string>
+
     <string name="facebook_app_id">749741551871573</string>
 
     <string name="fb_login_protocol_scheme">fb749741551871573</string>
