--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,10 @@
     <!--<string name="auth0_client_id">JYPws2eLK9Re7Ff5iZlN9T7tQ2sRcN40</string>-->
     <!--<string name="auth0_domain">coderdaudat.auth0.com</string>-->
 
+    <string name="all_price_unit">credits</string>
+
+    <string name="all_price_buy_phone_number">3 credits</string>
+
     <!-- NOTIFICATION -->
     <string name="notification_money_title">More Phone</string>
     <string name="notification_money_description">Your more phone is out of money. Please add money to your account.</string>
@@ -36,8 +40,6 @@
     <string name="dialog_payment_visa">VISA ***** 0011</string>
     <string name="dialog_payment_paypal">Paypal</string>
     <string name="dialog_payment_add_card">Add Card</string>
-
-    <string name="add_fund_purchase_unit">$</string>
 
     <!-- Fragment Card CVV -->
     <string name="card_cvv_text_cvv">CVV</string>
