--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -238,6 +238,10 @@
     <string name="purchase_mms_summary">This number can send and receive multi media messages to and from mobile number</string>
     <string name="purchase_fail">Purchase fail</string>
     <string name="purchase_success">Purchase a phone number success</string>
+    <string name="purchase_expire">Expire</string>
+    <string name="purchase_expire_summary">Tap for choose expire date</string>
+    <string name="purchase_expire_date_error">Expire date must after today</string>
+    <string name="purchase_expire_date_alert">Please choose expire date</string>
 
     <!-- Fragment Credit -->
     <string name="credit_label">Credit</string>
@@ -275,6 +279,11 @@
     <string name="delete_phone_number_dialog_cancel">CANCEL</string>
 
     <string name="delete_phone_number_success">Delete phone number success</string>
+
+    <!-- OptionPhoneNumberDialog -->
+    <string name="option_phone_number_label">Pool phone number</string>
+    <string name="option_phone_number_dialog_title">Option buy phone number</string>
+
 
     <!-- RequirePhoneNumberDialog -->
     <string name="require_phone_number_dialog_title">Require phone number</string>
