--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="menu_buy_a_phone">Buy a phone</string>
     <string name="menu_credit">Credit</string>
     <string name="menu_setting">Setting</string>
+    <string name="menu_expire">Expire</string>
     <string name="menu_usage">Usage</string>
     <string name="menu_group_settings">Settings</string>
     <string name="menu_review">Review</string>
@@ -259,6 +260,29 @@
     <string name="incoming_decline">Decline</string>
     <string name="incoming_accept">Accept</string>
     <string name="incoming_status">Incoming...</string>
+
+    <string name="incoming_phone_number_expired">Expired</string>
+    <string name="incoming_phone_number_remain">Remain </string>
+
+    <plurals name="elapsed_day">
+        <item quantity="one">%d d</item>
+        <item quantity="other">%d d</item>
+    </plurals>
+
+    <plurals name="elapsed_hour">
+        <item quantity="one">%d h</item>
+        <item quantity="other">%d h</item>
+    </plurals>
+
+    <plurals name="elapsed_min">
+        <item quantity="one">%d m</item>
+        <item quantity="other">%d m</item>
+    </plurals>
+
+    <plurals name="elapsed_second">
+        <item quantity="one">%d s</item>
+        <item quantity="other">%d s</item>
+    </plurals>
 
     <!-- Fragment Outgoing Screen -->
     <string name="outgoing_dialing">Dialing...</string>
