--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -713,4 +713,7 @@
     <string name="contact_add_field_address">Address</string>
     <string name="contact_add_field_relationship">Relationship</string>
     <string name="contact_add_field_note">Note</string>
+
+    <string name="contact_creation_label">Create contact</string>
+    <string name="menu_contact_creation">Create contact</string>
 </resources>
