--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
 
     <string name="message_error_create_contact">Create contact error</string>
 
+    <string name="message_error_update_contact">Update contact error</string>
+
     <string name="message_missing_info">Please enter all information</string>
 
     <string name="facebook_app_id">749741551871573</string>
