--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,6 +129,8 @@
     <string name="title_dialog_message">Message Options</string>
     <string name="text_button_cancel_dialog_message">Cancel</string>
 
+    <string name="title_call_log_message">Call Options</string>
+
     <!-- Fragment Message Compose-->
     <string name="message_compose_label">Compose</string>
     <string name="message_compose_hint_contacts">Enter recipients</string>
@@ -723,5 +725,6 @@
     <string name="contact_add_field_note">Note</string>
 
     <string name="contact_creation_label">Create contact</string>
+    <string name="contact_update_label">Update contact</string>
     <string name="menu_contact_creation">Create contact</string>
 </resources>
