--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,7 +192,6 @@
     <!-- Change Friendly Name Dialog -->
     <string name="change_friendly_name_dialog_title">Change Friendly Name</string>
     <string name="change_friendly_name_dialog_change">CHANGE</string>
-    <string name="change_friendly_name_dialog_cancel">CANCEL</string>
     <string name="change_friendly_name_dialog_empty">Please enter friendly name</string>
 
     <string name="setting_enable_record">Enable Record</string>
@@ -211,12 +210,10 @@
 
     <string name="configure_phone_dialog_title">Configure Phone</string>
     <string name="configure_phone_dialog_ok">OK</string>
-    <string name="configure_phone_dialog_cancel">CANCEL</string>
     <string name="configure_phone_dialog_empty">Please enter phone number</string>
 
     <string name="configure_email_dialog_title">Configure Email</string>
     <string name="configure_email_dialog_ok">OK</string>
-    <string name="configure_email_dialog_cancel">CANCEL</string>
     <string name="configure_email_dialog_empty">Please enter email</string>
 
     <!-- Fragment License -->
@@ -319,7 +316,6 @@
     <string name="delete_phone_number_dialog_title">Delete</string>
     <string name="delete_phone_number_dialog_message">Are you sure?</string>
     <string name="delete_phone_number_dialog_ok">OK</string>
-    <string name="delete_phone_number_dialog_cancel">CANCEL</string>
 
     <string name="delete_phone_number_success">Delete phone number success</string>
 
@@ -343,7 +339,6 @@
     <string name="alert_delete_record_dialog_title">Delete</string>
     <string name="alert_delete_record_dialog_message">Are you sure you want to delete this record?</string>
     <string name="alert_delete_record_dialog_delete">DELETE</string>
-    <string name="alert_delete_record_dialog_cancel">CANCEL</string>
 
     <string name="title_dialog_rate">Review</string>
     <string name="msg_dialog_rate">RATE NOW</string>
@@ -658,7 +653,6 @@
     <string name="quickcontact_suggestion_link_button">LINK CONTACTS</string>
 
     <!-- Button used in quick contact suggestion card to collapse suggestion card. [CHAR LIMIT=30]-->
-    <string name="quickcontact_suggestion_cancel_button">CANCEL</string>
 
     <!-- Option displayed in context menu to set long pressed item as default contact method [CHAR LIMIT=64] -->
     <string name="set_default">Set default</string>
@@ -727,4 +721,6 @@
     <string name="contact_creation_label">Create contact</string>
     <string name="contact_update_label">Update contact</string>
     <string name="menu_contact_creation">Create contact</string>
+
+    <string name="text_group_detail">Other</string>
 </resources>
